// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders correctly 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-11oullq {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-11oullq[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-11oullq[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-11oullq[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-11oullq[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 euthihp0"
  >
    <span
      aria-checked="false"
      class="cache-11oullq euthihp2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly labeled 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-lqnvpw {
  overflow: hidden;
  outline: none;
  width: 70px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-lqnvpw[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-lqnvpw[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              58px
            ) translateX(-100%);
  -moz-transform: translateX(
              58px
            ) translateX(-100%);
  -ms-transform: translateX(
              58px
            ) translateX(-100%);
  transform: translateX(
              58px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-lqnvpw[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-lqnvpw[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1a5an6j {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 700;
  font-size: 16px;
  position: absolute;
  line-height: 20px;
  width: calc(100% - 20px);
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 euthihp0"
  >
    <span
      aria-checked="false"
      class="cache-lqnvpw euthihp2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1a5an6j euthihp3"
      >
        OFF
      </span>
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-11oullq {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-11oullq[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-11oullq[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-11oullq[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-11oullq[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="true"
    class="cache-759u60 euthihp0"
  >
    <span
      aria-checked="true"
      class="cache-11oullq euthihp2"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly when checked and labeled 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-lqnvpw {
  overflow: hidden;
  outline: none;
  width: 70px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-lqnvpw[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-lqnvpw[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              58px
            ) translateX(-100%);
  -moz-transform: translateX(
              58px
            ) translateX(-100%);
  -ms-transform: translateX(
              58px
            ) translateX(-100%);
  transform: translateX(
              58px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-lqnvpw[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-lqnvpw[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1a5an6j {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 700;
  font-size: 16px;
  position: absolute;
  line-height: 20px;
  width: calc(100% - 20px);
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="true"
    class="cache-759u60 euthihp0"
  >
    <span
      aria-checked="true"
      class="cache-lqnvpw euthihp2"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1a5an6j euthihp3"
      >
        ON
      </span>
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly when checked and labeled on left 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-d8hivk {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 10px;
  width: 28px;
  text-align: right;
}

.cache-11oullq {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-11oullq[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-11oullq[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-11oullq[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-11oullq[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="true"
    class="cache-759u60 euthihp0"
  >
    <span
      class="cache-d8hivk euthihp3"
    >
      ON
    </span>
    <span
      aria-checked="true"
      class="cache-11oullq euthihp2"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly when checked and labeled on right 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-11oullq {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-11oullq[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-11oullq[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-11oullq[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-11oullq[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

.cache-ltax9v {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: 10px;
  width: 28px;
}

<label
    aria-checked="true"
    class="cache-759u60 euthihp0"
  >
    <span
      aria-checked="true"
      class="cache-11oullq euthihp2"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
    <span
      class="cache-ltax9v euthihp3"
    >
      ON
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-rtgc1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.cache-rx9437 {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dce1eb;
  border: none;
  border-radius: 34px;
  cursor: not-allowed;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 0.5;
}

.cache-rx9437[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-rx9437[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-rx9437[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-rx9437[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-rtgc1 euthihp0"
    disabled=""
  >
    <span
      aria-checked="false"
      class="cache-rx9437 euthihp2"
      disabled=""
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        class="cache-cujed6 euthihp1"
        disabled=""
        id="test"
        name="test"
        style="pointer-events: none;"
        type="checkbox"
      />
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with custom inside labels 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-lqnvpw {
  overflow: hidden;
  outline: none;
  width: 70px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-lqnvpw[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-lqnvpw[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              58px
            ) translateX(-100%);
  -moz-transform: translateX(
              58px
            ) translateX(-100%);
  -ms-transform: translateX(
              58px
            ) translateX(-100%);
  transform: translateX(
              58px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-lqnvpw[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-lqnvpw[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1a5an6j {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 700;
  font-size: 16px;
  position: absolute;
  line-height: 20px;
  width: calc(100% - 20px);
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 euthihp0"
  >
    <span
      aria-checked="false"
      class="cache-lqnvpw euthihp2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1a5an6j euthihp3"
      >
        No
      </span>
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with custom label render on left 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-z6p9mr {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 10px;
  width: NaNpx;
  text-align: right;
}

.cache-11oullq {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-11oullq[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-11oullq[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-11oullq[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-11oullq[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 euthihp0"
  >
    <span
      class="cache-z6p9mr euthihp3"
    >
      <span
        style="font-weight: bold;"
      >
        Custom label rendered
      </span>
    </span>
    <span
      aria-checked="false"
      class="cache-11oullq euthihp2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-11oullq {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-11oullq[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-11oullq[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-11oullq[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-11oullq[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

.cache-n4kltw {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: 10px;
  width: 88px;
}

<label
    aria-checked="false"
    class="cache-759u60 euthihp0"
  >
    <span
      aria-checked="false"
      class="cache-11oullq euthihp2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
    <span
      class="cache-n4kltw euthihp3"
    >
      Unchecked
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with custom width 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-c4xwbs {
  overflow: hidden;
  outline: none;
  width: 120px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-c4xwbs[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-c4xwbs[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              108px
            ) translateX(-100%);
  -moz-transform: translateX(
              108px
            ) translateX(-100%);
  -ms-transform: translateX(
              108px
            ) translateX(-100%);
  transform: translateX(
              108px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-c4xwbs[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-c4xwbs[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 euthihp0"
  >
    <span
      aria-checked="false"
      class="cache-c4xwbs euthihp2"
      width="120"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with label inside 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-lqnvpw {
  overflow: hidden;
  outline: none;
  width: 70px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-lqnvpw[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-lqnvpw[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              58px
            ) translateX(-100%);
  -moz-transform: translateX(
              58px
            ) translateX(-100%);
  -ms-transform: translateX(
              58px
            ) translateX(-100%);
  transform: translateX(
              58px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-lqnvpw[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-lqnvpw[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1a5an6j {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 700;
  font-size: 16px;
  position: absolute;
  line-height: 20px;
  width: calc(100% - 20px);
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 euthihp0"
  >
    <span
      aria-checked="false"
      class="cache-lqnvpw euthihp2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1a5an6j euthihp3"
      >
        OFF
      </span>
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with labels on left 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-d8hivk {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 10px;
  width: 28px;
  text-align: right;
}

.cache-11oullq {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-11oullq[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-11oullq[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-11oullq[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-11oullq[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 euthihp0"
  >
    <span
      class="cache-d8hivk euthihp3"
    >
      OFF
    </span>
    <span
      aria-checked="false"
      class="cache-11oullq euthihp2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with non default size 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-1wjml66 {
  overflow: hidden;
  outline: none;
  width: 40px;
  height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-1wjml66[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-1wjml66[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              28px
            ) translateX(-100%);
  -moz-transform: translateX(
              28px
            ) translateX(-100%);
  -ms-transform: translateX(
              28px
            ) translateX(-100%);
  transform: translateX(
              28px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-1wjml66[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-1wjml66[aria-checked='true']>.euthihp3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-110sibj {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 12px;
  height: 12px;
  background-color: #f6f5f7;
}

<label
    aria-checked="false"
    class="cache-759u60 euthihp0"
  >
    <span
      aria-checked="false"
      class="cache-1wjml66 euthihp2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-110sibj euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with non default variant 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-itou47 {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-itou47[aria-checked='true'] {
  background-color: #cdfcf1;
}

.cache-itou47[aria-checked='true']>.euthihp4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #45d6b5;
}

.cache-itou47[aria-checked='false']>.euthihp3 {
  color: #4a4f62;
  right: 0;
}

.cache-itou47[aria-checked='true']>.euthihp3 {
  color: #45d6b5;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 euthihp0"
  >
    <span
      aria-checked="false"
      class="cache-itou47 euthihp2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 euthihp1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol euthihp4"
      />
    </span>
  </label>
</DocumentFragment>
`;
